--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-header": "^1.7.1",
-    "gulp-minify": "0.0.5"
+    "gulp-minify": "0.0.5",
+    "gulp-rename": "^1.2.2"
   }
 }
